adds more content and media

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
   }
   </style>
   </head>
-  <body>
+  <body class="noScroll">
 
     <!-- text for right panel is here -->
     <div id="right-panel">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Welcome to [insert name of our company]</p>
-            <p>Our mission is to ...</p>
-            <img src="#"></img>
+            <p>Welcome to CommUnity Connect</p>
+            <p>Our mission is to enable students to survey and explore their community's assets to identify multiple career pathways and mentors, who can shape their professional pathways.</p>
+            <p>Enter your location in the map on the left to explore businesses in your community.</p>
+            <img src="image/graphic.jpg" width=100%></img>
+            <br>
+            <br>
             <p>Are you ready to go on a journey?</p>
+            <br>
             <a href="survey.html"><button type="button" class="btn btn-primary"><i class="fas fa-clipboard-list"></i>
             Take an interest survey!</button></a>
           </div>
