--- a/interests.html
+++ b/interests.html
@@ -23,68 +23,92 @@
         </div>
         <div class="card-columns">
   <div class="card">
-    <img class="card-img-top" src=".../100px160/" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title that wraps to a new line</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
+      <div class="card-header">
+        Hear from someone in the field
+      </div>
+      <video width=100% controls>
+      <source src="image/construction.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
   </div>
-  <div class="card p-3">
+  <div class="card">
+    <div class="card-header">
+      Additional Information
+    </div>
     <blockquote class="blockquote mb-0 card-body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer class="blockquote-footer">
-        <small class="text-muted">
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
+      <p>The classes that will help you to learn the knowledge and skill to be successful in this career are mechanics, math, environmental science, and drafting/computer-aided drafting.</p>
     </blockquote>
   </div>
   <div class="card">
-    <img class="card-img-top" src=".../100px160/" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="card-header">
+      Wages
     </div>
-  </div>
-  <div class="card bg-primary text-white text-center p-3">
-    <blockquote class="blockquote mb-0">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-      <footer class="blockquote-footer">
-        <small>
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
-    </blockquote>
-  </div>
-  <div class="card text-center">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="card-body text-center">
+      <h5 class="card-title">In 2016, the average annual wage in California was $166,580</h5>
+      <cite> <a href="https://www.bls.gov/oes/2016/may/oes_ca.htm">Bureau of Labor Statistics</a> </cite>
     </div>
   </div>
   <div class="card">
-    <img class="card-img" src=".../100px260/" alt="Card image">
-  </div>
-  <div class="card p-3 text-right">
-    <blockquote class="blockquote mb-0">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer class="blockquote-footer">
-        <small class="text-muted">
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
-    </blockquote>
+    <div class="card-header">
+      Preparation Required
+    </div>
+    <div class="card-body">
+      <p class="card-text">Most of these occupations require graduate school. For example, they may require a master's degree, and some require a Ph.D., M.D., or J.D. (law degree).</p>
+    </div>
   </div>
   <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
+    <img class="card-img" src="image/construction1.jpg" width=100%>
+  </div>
+  <div class="card">
+  <div class="card-header">
+    About the Job
+  </div>
+  <div class="card-body">
+    <p class="card-text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
+    <ul>
+      <li>Supervisory Civil Engineer</li>
+      <li>Senior Program Manager</li>
+      <li>Senior Engineering Manager</li>
+      <li>Research Development Manager</li>
+      <li>Prototype Engineer Manager</li>
+      <li>Project Manager</li>
+    <ul>
   </div>
 </div>
+  <div class="card">
+    <div class="card-header">
+      Education & Training
+    </div>
+    <div class="card-body">
+    <ul>
+      <li>Architecture</li>
+      <li>Landscape Architecture</li>
+      <li>Chemical and Biomolecular Engineering</li>
+      <li>Civil Engineering</li>
+      <li>Computer Software Engineering</li>
+      <li>Biochemical Engineering</li>
+      <li>Engineering/Industrial Management </li>
+    </ul>
+  </div>
+  </div>
+  <div class="card">
+  <div class="card-header">
+    Tasks you might do
+  </div>
+  <div class="card-body">
+    <p class="card-text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
+    <ul>
+      <li>Plan, direct, or coordinate survey work with other project activities.</li>
+      <li>Evaluate the environmental impacts of engineering, architecture, or research and development activities.</li>
+      <li>Solicit project support by conferring with officials or providing information to the public.</li>
+    <ul>
+  </div>
+</div>
+  <div class="card">
+    <img class="card-img" src="image/thomas-full.jpg" width=100%>
+  </div>
+</div>
+
       </div>
     <!-- Yes/No button
       <div>
@@ -99,11 +123,36 @@
         </form>
       </div> -->
       <br>
+    <div class="row span">
+      <div class="card" width=100%>
+        <div class="card-body">
+        Permission for parents to agree to make contact <br> <br>
+        CommUnity Connect supports students in exploring their community assets and professionals who can share with them what they do for a living. Your child should share what they do on this site and the people who share their interests.  After your child completes the survey and identifies people in your local community, you can intervene to foster the introduction and planned activities such as job shadowing, mentoring or other appropriate events to help your child find a career interest.  Your child can save their information on this site and access it through their account. We wish you luck in helping your child identify their interests and talents, take courses in school that will enable them to gain additional knowledge so that they can make informed decisions about how they want to spend their adult lives. Check the box below to confirm your consent.
+        <br>
+        <br>
+      </div>
+      <div>
+        <form id="yes_no" action="">
+          <input type="radio" name="rdo" id="yes"/>
+          <input type="radio" name="rdo" id="no" checked/>
+          <div class="switch">
+            <label for="yes">Yes</label>
+            <label for="no">No</label>
+            <span></span>
+          </div>
+        </form>
+      </div>
+      <br>
+      <br>
+    </div>
+  </div>
+  <br>
+  <br>
     <div class = "row text-center">
       <div class = "col-12">
       <a href="matches.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
      View matches</button></a>
-   </div>
+    </div>
    </div>
     </div>
 
