--- a/matches.html
+++ b/matches.html
@@ -16,51 +16,56 @@
       <!-- start of carousel -->
       <div id="my_carousel" class="carousel slide" data-pause="true">
         <div class="carousel-inner">
-
-          <!-- start of library -->
+          <!-- start of bank -->
           <div class="carousel-item active">
             <div class="card border-0">
               <br>
-              <i class="fas fa-book fa-10x mx-auto library"></i>
+              <i class="fas fa-piggy-bank fa-10x mx-auto library"></i>
               <div class="card-body">
-                <h5 class="card-title">Library</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Long Island Credit Union</h5>
+                <p class="card-text">Long Island Credit Union has been around since 1961 serving the Long Island community.</p>
               </div>
               <div class="row">
                 <div class="col-md-4">
+                  <!-- Emily Jones -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/girl.png"></img>
+                      <img src="image/emily.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Emily Jones</h5>
+                      <p><em>Accounts Manager</em></p>
+                      <p class="card-text">Emily is responsible for managing an array of accounts. She also builds relationships with new clients and leads team productivity.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Jerome Daniels -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/girl.png"></img>
+                      <img src="image/jerome.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Jerome Daniels</h5>
+                      <p><em>Assistant Branch Manager</em></p>
+                      <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Elizabeth Gomez -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/girl.png"></img>
+                      <img src="image/elizabeth.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Elizabeth Gomez</h5>
+                      <p><em>Bank Teller</em></p>
+                      <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
@@ -72,8 +77,7 @@
             </div>
           </div>
           <!-- end of library -->
-
-          <!-- start of bank -->
+          <!-- start of construction -->
           <div class="carousel-item">
             <div class="card border-0">
               <br>
@@ -82,93 +86,68 @@
                 <h5 class="card-title">Bob-Joe’s Construction Company</h5>
                 <p class="card-text">Bob-Joe has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
               </div>
-
-              <!-- person #1 profile -->
-               <div class="d-none row person4">
+              <!-- Thomas' profile -->
+               <div class="d-none row person2">
                  <div class="col-sm-12">
                   <div class="card text-center">
                     <div class="card-body">
                       <img src="image/thomas-full.jpg" width=100%></img>
                       <br>
                       <br>
-                      <p>Role: Architectural and Engineering Manager</p>
-                      <p>Thomas grew up with in interest in repairing household appliances. He later did an apprenticeship to attain technical skills and mechanical skills.
-                        As of late, Thomas has been more interested in drawing designs and blueprints and creating models of his buildings to present to clients.
-                        </p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-bank','person4');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
+                      <p class="text-left">Role: Architectural and Engineering Manager</p>
+                      <p class="text-left">
+                        Thomas is experienced in repairing household appliances. As a manger, he is responsible for solving technical and mechanical problems on site. He also draws designs and blueprints for his team and creates models of buildings to present to clients.
+                      </p>
+                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-construction','person2');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
                   </div>
                 </div>
               </div>
-
-              <!-- person #2 profile -->
-              <div class="d-none row person5">
-                 <div class="col-sm-12">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <p>This is profile 5</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-bank','person5');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- person #3 profile -->
-              <div class="d-none row person6">
-                 <div class="col-sm-12">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <p>This is profile 6</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-bank','person6');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row profiles-bank">
+              <!-- profiles view -->
+              <div class="row profiles-construction">
                 <div class="col-md-4">
+                  <!-- Thomas Napier -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
                       <img src="image/thomas.png" height="128"></img>
                       <br>
                       <br>
                       <h5 class="card-title">Thomas Napier</h5>
+                      <p><em>Architectural and Engineering Manager</em></p>
                       <p class="card-text">Thomas has been with Bob-Joe for 15 years working his way up from doing household roofing to being a project manager on long-term contracts. </p>
-                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person4','profiles-bank');"><i class="fas fa-user-circle"></i> Profile
-</button>
+                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
+                      <button class="btn btn-primary" type="button" onClick="change_view('person2','profiles-construction');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Derrick Long -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/man.png"></img>
+                      <img src="image/derrick.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Derrick Long</h5>
+                      <p><em>Civil Engineer</em></p>
+                      <p class="card-text">Derrick plans, designs and oversees construction and maintenance of building structures and infrastructure.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person5','profiles-bank');"><i class="fas fa-user-circle"></i> Profile
-</button>
-                    </div>
+                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Katherine Williams -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/man.png"></img>
+                      <img src="image/katherine.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Katherine Williams</h5>
+                      <p><em>Construction Assistant</em></p>
+                      <p class="card-text">Katherine assists construction tradespeople on construction sites. She ensures materials and tools are on site.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person6','profiles-bank');"><i class="fas fa-user-circle"></i> Profile
-</button>
-                    </div>
+                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
+                      </div>
                   </div>
                 </div>
                 <br>
@@ -176,8 +155,7 @@
               </div>
             </div>
           </div>
-          <!-- end of bank -->
-
+          <!-- end of construction -->
           <!-- start of radio station -->
           <div class="carousel-item">
             <div class="card border-0">
@@ -187,8 +165,7 @@
                 <h5 class="card-title">WKZ Radio Station</h5>
                 <p class="card-text">WKZ Radio is a rock music station that brings you all the best rock songs from the past decades.</p>
               </div>
-
-              <!-- person #1 profile -->
+              <!-- Rachel's profile -->
                <div class="d-none row person1">
                  <div class="col-sm-12">
                   <div class="card text-center">
@@ -196,84 +173,57 @@
                       <img src="image/rachel-full.jpg" width=100%></img>
                       <br>
                       <br>
-                      <p>Role:Radio and Television Announcer</p>
-                      <p>On a typical day, Rachel hosts civic, charitable, or promotional events that are broadcast over radio. She often writes and edits her own scripts for broadcasts.
-                        She enjoys locating guests from across the nation to talk on her show that focuses on human rights.</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
+                      <p class="text-left">Rachel Matthews</p>
+                      <p class="text-left">As the radio and television announcer for WKZ Rachel hosts civic, charitable, or promotional events that are broadcast over television or radio. She also writes and edits video and scripts for broadcasts. She is responsible for locating guests to appear on talk or interview shows and uses video and recording technology in all her programs.</p>
+                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
                   </div>
                 </div>
               </div>
-
-              <!-- person #2 profile -->
-              <div class="d-none row person2">
-                 <div class="col-sm-12">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <p>This is profile 2</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person2');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- person #3 profile -->
-              <div class="d-none row person3">
-                 <div class="col-sm-12">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <p>This is profile 3</p>
-                      <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person3');"><i class="fas fa-chevron-circle-left"></i> Go Back
-</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
               <!-- profiles view -->
               <div class="row profiles-radio">
                 <div class="col-md-4">
+                  <!-- Rachel Matthews -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
                       <img src="image/rachel.png" height="128"></img>
                       <br>
                       <br>
                       <h5 class="card-title">Rachel Matthews</h5>
-                      <p class="card-text">Rachel has been with WKZ for 5 years. She started as an intern and worked her way up to full-time announcer.
-</p>
+                      <p><em>Radio and television Announcer</em></p>
+                      <p class="card-text">Rachel has been with WKZ for 5 years. She started as an intern and worked her way up to full-time announcer.</p>
                       <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person1','profiles-radio');"><i class="fas fa-user-circle"></i> Profile
-</button>
+                      <button class="btn btn-primary" type="button" onClick="change_view('person1','profiles-radio');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Janine Walker -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/man2.png"></img>
+                      <img src="image/janine.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Shawn Green</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person2','profiles-radio');"><i class="fas fa-user-circle"></i> Profile
-</button>
+                      <h5 class="card-title">Janine Walker</h5>
+                      <p><em>Producer</em></p>
+                      <p class="card-text"> Janine creates content and manages the whole radio production process for both live and recorded programmes.</p>
+                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
+                  <!-- Joseph Lane -->
                   <div class="card text-center inner-card">
                     <div class="card-body">
-                      <img src="image/man2.png"></img>
+                      <img src="image/joseph.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Aliess Collins</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
-                      <button class="btn btn-primary" type="button" onClick="change_view('person3','profiles-radio');"><i class="fas fa-user-circle"></i> Profile
-</button>
+                      <h5 class="card-title">Joseph Lane</h5>
+                      <p><em>Radio Programme Controller</em><p>
+                      <p class="card-text">Joseph leads programming teams on commercial radio stations and manages advertisement content.</p>
+                      <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
+                      <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
                   </div>
                 </div>
@@ -283,7 +233,6 @@
             </div>
           </div>
           <!-- end of radio station -->
-
         </div>
       </div>
     </div>
